<resources>
    <string name="Apply_Button">apply_button</string>
    <string name="BinaryUpdateMessage">New Market update found, would you like to download it?</string>
    <string name="CheckInstall">正在校验安装包</string>
    <string name="CheckLicense">Validating License...</string>
    <string name="Checksum_Failed">Failed Checksum Compare</string>
    <string name="Composite_Failed">Failed Checksum on Composited Split Files</string>
    <string name="Confirm">确定</string>
    <string name="ConnectingServer">Đang lấy thông tin phiên bản (Yêu cầu kết nối mạng)...</string>
    <string name="CouldntConnect_Failed">"Couldn't connect to remote file host."</string>
    <string name="DownloadComplete">Hoàn tất</string>
    <string name="DownloadManualURL">Error downloading game content. Please try again, or visit http://dungeondefenders.com/androidmobile for instructions to perform a manual install.</string>
    <string name="DownloadReboot">下载补丁失败,请检查网络连接并重启游戏</string>
    <string name="DownloadUpdate">正在下载更新文件</string>
    <string name="Download_Failed">Failed Downloading File</string>
    <string name="Downloaded">Downloaded</string>
    <string name="Downloading">Downloading</string>
    <string name="Error">Error</string>
    <string name="Exit">Exit</string>
    <string name="File">File</string>
    <string name="Init_Failed">Application initialization failed. The application will exit.</string>
    <string name="InstallDirectory">Checking/Installing Directory</string>
    <string name="LeaveGame">训练师,您确定要离开游戏吗？</string>
    <string name="MemNotEnough">Warning: This Android device does not meet the minimum requirement of 256 MB RAM.</string>
    <string name="No">否</string>
    <string name="NoLicense">Unable to obtain a license!</string>
    <string name="NoNetwork_Failed">No network connection detected.</string>
    <string name="NoSDCard">未发现SD卡， 游戏将不支持保存游戏设置和动态下载地图。</string>
    <string name="NotEnoughSpace">Not Enough SDCard space for installation.</string>
    <string name="Notification">提示</string>
    <string name="NotifyPlayer">报告训练师</string>
    <string name="OpenGL_Failed">OpenGL initialization failed, your device likely does not support shader model ES2.0, a requirement for UE3.</string>
    <string name="Out_Of_Memory">There is not enough memory available on the external card. Please delete some files and try again.</string>
    <string name="PerformancePref_Key">list_pref_key</string>
    <string name="ResolutionPref_Key">resolution_pref_key</string>
    <string name="Retry">Retry</string>
    <string name="Set_Preference">Preferences</string>
    <string name="SplitFile">Split File</string>
    <string name="StartDownload">Bắt đầu tải</string>
    <string name="SyncFile_Failed">Failed Generating Sync File</string>
    <string name="Text_Button_Cancel">Cancel</string>
    <string name="Text_Button_Cancel_Verify">Cancel Verification</string>
    <string name="Text_Button_Pause">Pause Download</string>
    <string name="Text_Button_Resume">Resume Download</string>
    <string name="Text_Button_Resume_Cellular">Resume Download</string>
    <string name="Text_Paused_Cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="Text_Paused_Cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available</string>
    <string name="Text_Validation_Complete">XAPK File Validation Complete. Select OK to exit.</string>
    <string name="Text_Validation_Failed">XAPK File Validation Failed. Please restart the app and we will re-download the files.</string>
    <string name="Text_Verifying_Download">Verifying Download</string>
    <string name="TryReDownload">File hỏng, đang tải lại</string>
    <string name="UnknownError_Failed">Unknown error.</string>
    <string name="UpdateMessageBox">Update Found, Would you like to update?</string>
    <string name="WifiMessageBox">No Wifi Found, what would you like to do?</string>
    <string name="WifiSettings">Wifi Settings</string>
    <string name="Wifi_Disabled">Wifi is not turned on. You may need to enable wifi or use a data service</string>
    <string name="Yes">是</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_bind_success">Successfully binded</string>
    <string name="account_not_bind_email">Email not binded</string>
    <string name="account_not_bind_phone">Mobile number not binded</string>
    <string name="account_not_empty">Account ID needed！</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">GooglePayPlugin</string>
    <string name="cg_a_add">MMKNKETQQQJCTPOKJKFIKFIKELINJCQPQMKELNKDKGSOMDFENOORMKRQSWRSHOOPNKOKEFHIMJCDKGSLG</string>
    <string name="cg_a_d">TJKRGEUJKSNSNEA</string>
    <string name="cg_a_k">LJELEARJKKIIQLOLIISLIKGENFCNJELJERNSNGELHGUNMRKGNHAQJKTNMKIIOICUKMNKGKEARGEKFCOFCQLOOIIUJKRLOYNS</string>
    <string name="cg_no_facebook_tip">"This mobile hasn't installed Facebook app, plz install first"</string>
    <string name="cg_txt_bind">Bind</string>
    <string name="cg_txt_bind_sent_tip1">Check the number for a code and input to verify</string>
    <string name="cg_txt_bind_sent_tip2">Check the email for a code and input to verify</string>
    <string name="cg_txt_change">Change</string>
    <string name="cg_txt_change_bind_email">After binding email to the account, password can be reset through the email.</string>
    <string name="cg_txt_change_bind_phone">After binding mobile phone to the account, password can be reset through the number.</string>
    <string name="cg_txt_confirm_submit">Submit</string>
    <string name="cg_txt_consume_buy">Buy goods</string>
    <string name="cg_txt_consume_buy_status">Result</string>
    <string name="cg_txt_consume_cost">Consume platform currency</string>
    <string name="cg_txt_consume_order">Consumption details</string>
    <string name="cg_txt_exchange">Exchange</string>
    <string name="cg_txt_hint_input_email">Input the email you desire</string>
    <string name="cg_txt_hint_input_phone">Input the mobile number you desire</string>
    <string name="cg_txt_sent_email_tip">A code has been sent to your email</string>
    <string name="cg_txt_sent_phone_tip">A code has been sent to your number</string>
    <string name="cg_txt_step_one">1st step</string>
    <string name="cg_txt_step_three">3rd step</string>
    <string name="cg_txt_step_two">2nd step</string>
    <string name="app_name_mod">Pokemod</string>
    <string name="cg_txt_tip_input_psw">Please set you password (6~20)</string>
    <string name="cg_txt_tips_bind_email">After binding email to the account, the account ID will be changed to the email. It can be used to reset password.</string>
    <string name="cg_txt_tips_bind_phone">After binding mobile number to the account, the account ID will be changed to the mobile number. It can be used to reset password.</string>
    <string name="cg_txt_wait_bind_email">Pending email to be binded:</string>
    <string name="cg_txt_wait_bind_phone">Pending number to be binded:</string>
    <string name="cg_txt_warn_bind_email">Account security level low: Email binding recommended</string>
    <string name="cg_txt_warn_bind_phone">Account security level low: Mobile phone binding recommended</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_delete_account">Delete account</string>
    <string name="txt_fast">Enter</string>
    <string name="txt_hint_password">Enter your password(6~20)</string>
    <string name="txt_other_login">Other login</string>
    <string name="txt_privacy">Privacy Policy</string>
    <string name="txt_select_account">Select an account</string>
    <string name="txt_verify_pwd">Please enter the password for safety reason。</string>
</resources>